# njord

./: Cargo.toml  Dockerfile
cli/: Cargo.toml
cli/src/: config.rs  institution.rs  main.rs  matcher.rs  nordigen.rs  requisition.rs  state.rs  token.rs
cli/src/interactions/: accepted_confirm.rs  client_credentials_input.rs  institution_select.rs  mod.rs  reuse_confirm.rs
cli/src/nordigen/: account.rs  client_credentials.rs  config.rs  http_interface.rs  institution.rs  mod.rs  requisition.rs  token.rs  transaction.rs
docs/: CNAME  index.html  requisition_return.html
src/: data.rs  env.rs  main.rs
